tests/paczka2/big_fuzzy/38401273.err
Error in line 9: Fif7KM A527 43,6
Error in line 16: DAX A870 19,1
Error in line 25: S128 S343 84,1
Error in line 13: Fif7KM S128 71,2
Error in line 27: Fif7KM S343 60,7
Error in line 24: BBYEY A870 53,5
Error in line 35: DAX A527 79,0
Error in line 45: S128 A527 57,1
Error in line 54: DAX S128 53,0
Error in line 62: Fif7KM A527 283,3
Error in line 68: ?AÅ70
Error in line 67: Fif7KM S128 79,0
Error in line 50: BBYEY S343 23,2
Error in line 94: S128 A870 56,7
Error in line 98: X0rcy3lFOZ A527 92,2
Error in line 105: 7gJvrTBl9y9 A870 98,4
Error in line 108: BBYEY A527 162,7
Error in line 123: S128 A870 162,17
Error in line 121: S128 A870 57,3
Error in line 120: DAX S128 43,0
Error in line 101: X0rcy3lFOZ S343 0,7
Error in line 129: Fif7KM S128 72,0
Error in line 125: WMHx2iO2F A870 57,5
Error in line 136: WMHx2iO2F S343 55,2
Error in line 132: X0rcy3lFOZ A870 51,8
Error in line 150: ngJvrTBl9y9 A8n0 19,9
Error in line 153: BBYEY A870 41,0
Error in line 152: DAX A527 7,3
Error in line 174: X0rcy3lFOZ A527 71,0
Error in line 175: X0rcy3lFOZ S128 89,4
Error in line 159: 7gJvrTBl9y9 A870 6,8
Error in line 178: S128 A527 29,3
Error in line 179: 7gJvrTBl9y9 A527 89,4
Error in line 183: DAX A527 27,8
Error in line 171: BBYEY A870 54,0
Error in line 188: WMHx2iO2F S128 1,0
Error in line 210: DAX A870 22,0
Error in line 214: S128 S343 91,6
Error in line 218: DAX S343 48,3
Error in line 221: DAX S128 14,6
Error in line 234: 7gJvrTBl9y9 A870 14,4
